# directoragent

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.copilot/: instructions.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: api_mcp_tools.md  business_logic_rules.md  copilot_mcp.md  data_models.md  fastmcp_design_patterns.md  iracing.md  iracing_extended_metrics_spec.md  mcp_refactor_plan.md  mcpfast_refactor.md  mvp_v1_definition.md  nats-messages.md  spec.md  success_metrics.md  tech_stack.md  use_cases.md
docs/faq/: popular.json
docs/rules/: penalties.md
docs/schemas/: get_current_battle.input.schema.json  get_current_battle.output.schema.json  get_fastest_practice.input.schema.json  (+11 more)
mcp/: Dockerfile
scripts/: chat_debug.py  chat_tester.py  ingest_chat.py  ingest_sporting_code.py  init_db.py  llm_chat_assert.py  mcp_handshake_debug.py  mcp_stdio.py  run_agent.py  run_mcp.py
tests/: test_agent_shutdown.py  test_battle_tool.py  test_config_settings.py  test_context_propagation.py  test_director_agent.py  test_driver_search.py  test_gemini_integration_live.py  test_gemini_session.py  test_integration_nats.py  test_intent.py  test_mcp_client_wrapper.py  test_mcp_lifespan.py  test_mcp_stdio.py  test_mcp_tool_schemas.py  test_nats_timeout_config.py  test_operational_status_tool.py  test_sdk_server_tools.py  test_search_chat_tool.py  test_search_corpus_tool.py  test_search_rules_tool.py  test_session_persistence_integration.py  test_state_cache_basic.py  test_tool_catalog.py
(+45 files in other folders)
